--- a/app/assets/stylesheets/ui/_form.scss
+++ b/app/assets/stylesheets/ui/_form.scss
@@ -2,19 +2,30 @@
 	.text-input,
 	label {
 		font-size: 1.5rem;
-		padding: .375rem;
 		color: #fff;
+		padding: 0 .375rem 0 0;
+		@include mq(46.875em) {
+			padding: .375rem;
+		}
 	}
 
 	.text-input {
 		background-color: inherit;
 		border-width: .0625rem .0625rem .125rem;
 		border-color: transparent transparent #fff;
+		padding-top: 0;
 	}
 
 	fieldset {
 		border: 0;
-		padding: 0
+		padding-top: 0;
+		padding-bottom: 0;
+		padding-right: 0;
+	}
+
+	.search-stations,
+	.search-time {
+		width: 100%;
 	}
 
 	@include mq(46.875em) {
@@ -31,11 +42,18 @@
 }
 
 .text-input--wide {
-	width: 22rem;
+	display: block;
+	@include mq(46.875em) {
+		display: inline-block;
+	}
+    max-width: 22rem;
+    width: 100%;
 }
 
 .text-input--narrow {
-	width: 12rem;
+	display: block;
+    max-width: 22rem;
+    width: 100%;
 }
 
 .picker {
