--- a/app/assets/stylesheets/ui/_typeahead.scss
+++ b/app/assets/stylesheets/ui/_typeahead.scss
@@ -1,14 +1,23 @@
 .tt-hint {
 	color: rgba(255, 255, 255, .5);
-	padding: .375rem;
+	padding: 0 .375rem 0 0;
 	border-width: .0625rem;
+	padding-top: 0;
+
+	@include mq(46.875em) {
+		padding: .375rem;
+	}
 }
 
 .tt-dropdown-menu {
 	background-color: rgba(0, 0, 0, .5);
 	right: 0 !important;
 	text-align: left;
-	padding: .375rem;
+	padding: .375rem 0;
+
+	@include mq(46.875em) {
+		padding: .375rem;
+	}
 }
 
 .tt-suggestion > p {
